--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.css
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.css
@@ -22,6 +22,33 @@
   cursor: auto;
 
 }
+
+
+
+
+.mat-radio-button.mat-accent .mat-radio-outer-circle{
+height: 14px !important;
+width: 14px !important
+}
+.mat-radio-button2
+{
+    width: 20px;
+    height: 20px;
+}
+
+.RadioCss
+{
+    margin-left: 140px;
+    width: 20px;
+}
+.inputcss
+{
+font-size: 14px !important;
+}
+
+.mainLoginInput::-moz-placeholder {
+   font-family: inherit; 
+}
 .mainTextInfo
 {
     margin-left: -400px;
@@ -174,6 +201,7 @@ border-radius: 0px !important;
     border-left-style: none !important;
     border-right-style: none !important;
     border-top-style: none !important;
+     font-size: none !important;
 }
 
 .mainDivContainer{
@@ -210,7 +238,7 @@ border-radius: 0px !important;
 
 .column1{
     float: right;
-    width: 60%;
+    width: 55%;
     box-shadow: 0 2px 2px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
     -o-box-shadow: 2px  0 5px  rgba(0,0,0,.2);
     
@@ -228,7 +256,7 @@ border-radius: 0px !important;
 
 .column2{
     float: left;
-    width:37%;
+    width:42%;
     box-shadow: 0 2px 2px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
     -o-box-shadow: 2px  0 5px  rgba(0,0,0,.2);
 }
