164694331 :-Displaying "Both" .json file

--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/home.module.css
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/home.module.css
@@ -97,7 +97,7 @@ tr.mat-footer-row, tr.mat-row{
 .mat-table,mat-row,mat-cell,mat-footer-cell,mat-header-cell,mat-list-item,mat-line,
 mat-tab-group,mat-tab-label,mat-tab-link,mat-tab-label-content,mat-select,mat-radio-button,iframe,mat-card,
 mat-tab-link,mat-tab-link,mat-tab,matInput,input,mat-select-value,button,textarea,
-select,mat-option,mat-raised-button,mat-table,mat-list-item,mat-list,mat-paginator,mat-checkbox{
+select,mat-option,mat-raised-button,mat-table,mat-list-item,mat-list,mat-paginator,mat-raised-button2,mat-checkbox{
     font-family: inherit;
     font-size: 18px;
 }
@@ -267,6 +267,13 @@ mat-radio-button.mat-accent .mat-radio-inner-circle {
 tr.mat-header-row {
     height: 40px;
 }
+
+.mat-raised-button2{
+    border-radius: 1px !important;
+    
+    color: #FFFFFF;
+}
+
 
 .mat-raised-button{
     border-radius: 10px !important;
