--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
@@ -117,19 +117,38 @@
         </button>
       </div>
       <!-- <div class="ListFooter">(There can be only ONE Relationship between a Set of Tools)</div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
       <div class="divTablesHeading">
         <table>
           <tbody style="display:grid;max-height:50vh;margin-top: 10px">
             <tr class="dat-rowNew" style="margin-top:20px" *ngFor="let dummy of relationDataSource">
+
               <mat-radio-group [(ngModel)]="selectedDummyAgent">
                 <ng-container matColumnDef="radio">
                   <mat-radio-button [value]="dummy" color="primary" (click)="enableDelete()"></mat-radio-button>
                 </ng-container>
                 <td style="text-align:left;padding-left: 15px;padding-top: 8px;align-items: center;">{{dummy}}</td>
               </mat-radio-group>
+
             </tr>
           </tbody>
         </table>
+
+        <div [hidden]="!showDetail">
+          <mat-paginator #paginator [pageSize]="MAX_ROWS_PER_TABLE" showFirstLastButtons class="paginationStyle"></mat-paginator>
+        </div>
       </div>
 
 
@@ -143,8 +162,12 @@
               <td style="text-align:left;padding-left: 15px;padding-top: 8px;align-items: center;">{{dummy}}</td>
 
             </tr>
+            <div [hidden]="!showDetail">
+              <mat-paginator #paginator [pageSize]="MAX_ROWS_PER_TABLE" showFirstLastButtons class="paginationStyle"></mat-paginator>
+            </div>
           </tbody>
         </table>
+
       </div>
 
 
