#165340145 UI - Log files to be included in the Health Check Page

--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/blockchain/custom-report/custom-report-configuration/custom-report-configuration.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/blockchain/custom-report/custom-report-configuration/custom-report-configuration.component.html
@@ -107,8 +107,8 @@
                     </div>
                     <div class="inputWidth">
                         <mat-radio-group style="margin-left: 2%;" formControlName="querytype">
-                            <mat-radio-button value="CYPHER" color="primary"></mat-radio-button><span class="query">NEO4J</span>
-                            <mat-radio-button value="LEDGER" color="primary"></mat-radio-button><span class="query">NEO4J and HL</span>
+                            <mat-radio-button value="CYPHER" color="primary"></mat-radio-button><span class="query">CYPHER</span>
+                            <mat-radio-button value="LEDGER" color="primary"></mat-radio-button><span class="query">CYPHER and HYPERLEDGER</span>
                         </mat-radio-group>
                     </div>
                 </div>
