--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/healthcheck/healthcheck.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/healthcheck/healthcheck.component.html
@@ -204,5 +204,40 @@
         Service Failure. Please try again.
       </div>
     </mat-tab>
+
+   <!--  Report logs -->
+    <mat-tab label="Report logs" class="healthcheck-tab-style">
+      <div layout layout-align="left" class="sectionHeadingStyleWithoutButton">
+        <div layout>&nbsp; Report Logs</div>
+      </div>
+
+      <div id="reportLogs" layout-align="center center" class="tableContainerStyle" *ngIf="showContent">
+        <table mat-table [dataSource]="reportLogsDataSource">
+          <!-- Server Column -->
+          <ng-container matColumnDef="reportName">
+            <th mat-header-cell *matHeaderCellDef class="tableHeaderCss">Report Name</th>
+            <td mat-cell *matCellDef="let key" style="width:200px !important"> {{key.reportName}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="logFile">
+            <th mat-header-cell *matHeaderCellDef class="tableHeaderCss">Log File</th>
+            <td mat-cell *matCellDef="let key" style="width:200px !important"> <a class="file" (click)="downloadLog(key.reportName);">{{key.reportName}}<span>.log</span></a> </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="reportLogsColumns" class="tableHeaderCss" style="height:40px"></tr>
+          <tr mat-row *matRowDef="let row; columns: reportLogsColumns;"></tr>
+        </table>
+      </div>
+      <!-- Displays Progress spinner and Error message for service failure-->
+      <div *ngIf="showThrobber" style="display: flex; justify-content: center; align-items: center;overflow: hidden;">
+        <mat-progress-spinner [diameter]="100" color="primary" mode="indeterminate">
+        </mat-progress-spinner>
+      </div>
+      <div *ngIf="!(showContent || showThrobber)" layout-align="center center" style="text-align: center;">
+        <mat-icon svgIcon="healthcheck_failure_status" [ngStyle]="{color: '#FF8F1C', height: '25px', width: '25px'}">
+        </mat-icon>
+        Service Failure. Please try again.
+      </div>
+    </mat-tab>
   </mat-tab-group>
 </div>
