--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.css
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.css
@@ -54,10 +54,21 @@ font-size: 14px !important;
 {
     margin-left: -400px;
 }
+
+
+.tableText
+{
+    color: #0033A0;
+    font-family: inherit;
+    font-weight: bold;
+    width:115% !important;
+}
+
+
 .btnAlign{
     /* margin-right: 1px;  */
   position: absolute;
-  right: 50px;
+  right: 20px;
   top:120px;
 }
 mat-dialog-content::-webkit-scrollbar {
@@ -161,18 +172,28 @@ mat-dialog-content::-webkit-scrollbar-track {
 
 th, td {
   overflow: hidden;
-  width: 200px !important;
+  width: 100px !important;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
 .SubHeading{
-     font-size: 14px;
+     font-size: 16px;
     color:  #0033A0;
     font-weight:bold;
-    margin-left: 10px;
+    margin-left: 1px;
     margin-top: 21px;
 }
+
+.orangeStripCssSmall {
+    background-color: #FF8F1C;
+    margin-left: 16px;
+    margin-right: 16px;
+    width: 271% !important;
+    height: 1px;
+    margin: 0 auto;
+}
+
 .ListFooter
 {
     font-size: 10px;
@@ -186,10 +207,10 @@ th, td {
 
 .button .mat-raised-button
 {
-    border-top-left-radius: 10px !important;
-    border-top-right-radius: 10px !important;
-    border-bottom-right-radius: 10px !important;
-    border-bottom-left-radius: 10px !important;
+    border-top-left-radius: 0px !important;
+    border-top-right-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
     color: #FFFFFF;
 }
 
@@ -197,18 +218,18 @@ th, td {
     float: right;
     background-color: #0033A0 !important;
     margin-bottom: 8px;
-    margin-left: -100px; 
+    margin-left: -150px; 
    /*  margin-top: 10px; */
     margin-right: 10px;
     border-radius: 0px !important;
     height: 100%;
-    width:250px;
+    width:200px;
     padding-left: 10px;
     padding-right: 10px;
-     border-top-left-radius: 10px !important;
-    border-top-right-radius: 10px !important;
-    border-bottom-right-radius: 10px !important;
-    border-bottom-left-radius: 10px !important;
+     border-top-left-radius: 0px !important;
+    border-top-right-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
     font-size: 12px;
 }
 .input
@@ -269,6 +290,19 @@ th, td {
     height: 100%;
 }
 
+.NoteCssFirst
+{
+    color: #00B140;
+    font-size: 15px;
+    font-family: inherit;
+  
+}
+.NoteCss
+{
+    font-family: inherit;
+font-size: 14px;
+}
+
 .column2{
     float: left;
     width:42%;
@@ -278,6 +312,17 @@ th, td {
 .divTablesHeading{
     font-size: 16px;
     margin-top: 10px;
+    margin-bottom: 6px;
+    text-align: left;
+    /* width: 100vh; */
+    padding-left: 15px;
+}
+
+
+
+.divTablesHeadingLeft{
+    font-size: 16px;
+    margin-top: 40px;
     margin-bottom: 6px;
     text-align: left;
     /* width: 100vh; */
@@ -313,40 +358,15 @@ table tr:last-child td:last-child {
     width: 10%;
     overflow: auto; 
     font-family: inherit;
+        margin-left: 80px;
     /* margin-left: 500px; */
 }
-.button[disabled] .mat-icon[disabled][disabled]
-{
-    border: blue !important;
-    background-color: blue !important;
-}
 
-.button[disabled] .mat-icon-button[disabled][disabled]
-{
-    border: blue !important;
-    background-color: blue !important;
-}
 
-.button[disabled]{
-    border: 1px solid #0033A0 !important;
-    background-color: #cccccc;
-    color: black;
-}
 .button[disabled]
 {
-    border: blue !important;
-    background-color: blue !important;
-}
-.mat-icon[disabled]
-{
- border: blue !important;
-    background-color: blue !important;
-}
-
-.mat-icon[disabled][disabled]
-{
-    border: blue !important;
-    background-color: blue !important;
+    border:0px !important;
+    background-color:white!important;
 }
 
 
@@ -399,8 +419,8 @@ tbody::-webkit-scrollbar-track {
 } 
 
 button[disabled]{
-    border: 1px solid #999999;
-    background-color: #cccccc;
+    border: 0px;
+    background-color: transparent;
     color: black;
 }
 
