--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
@@ -29,78 +29,123 @@
     <div layout="row" style="width: 100%;margin-top: 6px; height: 80%;">
 
 
-      <div layout layout-align="end center" style="margin-left: 455px;">
+      <div layout layout-align="end center" style="margin-left: 0px;">
+        <label class="NoteCssFirst">Please Note:</label><label class="NoteCss"> Ensure that the properties selected to
+          build a
+          <br> Correlation <b>are indexed
+            in Neo4j</b> for
+          optimal
+          performance</label>
+        <div style="margin-left: 400px; margin-top: -40px;">
 
-        <label class="mainText"> Select Tools </label>
-        <mat-select [(ngModel)]="selectedAgent1" [style.height.px]="20" [style.width.%]="20" (ngModelChange)="loadAgent1Info(selectedAgent1)"
-          name="selectedAgent1" required placeholder="Select Tool 1" [ngClass]="{  'input-disabled' : readChange ,  'form-control': !readChange}">
-          <mat-option [disabled]="data1 === selectedAgent2" *ngFor="let data1 of agentDataSource" [value]="data1" style="color:#0033A0">
-            {{data1.toolName}}
-          </mat-option>
-        </mat-select>
-        <mat-select [(ngModel)]="selectedAgent2" [style.height.px]="20" [style.width.%]="20" (ngModelChange)="loadAgent1Info2(selectedAgent2)"
-          name="selectedAgent2" required placeholder="Select Tool 2" [ngClass]="{  'input-disabled' : readChange2 ,  'form-control': !readChange2}">
-          <mat-option [disabled]="data2 === selectedAgent1" *ngFor="let data2 of agentDataSource" [value]="data2" style="color:#0033A0">
-            {{data2.toolName}}
-          </mat-option>
-        </mat-select>
+
+          <label class="mainText"> Select Tools </label>
+          <mat-select [(ngModel)]="selectedAgent1" [style.height.px]="20" [style.width.%]="17" (ngModelChange)="loadAgent1Info(selectedAgent1)"
+            name="selectedAgent1" required placeholder="Select Tool 1" [ngClass]="{  'input-disabled' : readChange ,  'form-control': !readChange}">
+            <mat-option [disabled]="data1 === selectedAgent2" *ngFor="let data1 of agentDataSource" [value]="data1"
+              style="color:#0033A0">
+              {{data1.toolName}}
+            </mat-option>
+
+          </mat-select>
+          <!-- <button mat-icon-button (click)="addproperty()">
+            <mat-icon title="addprop1 " class="mat-icon material-icons">
+              add_box
+            </mat-icon>
+          </button> -->
+          <mat-select [(ngModel)]="selectedAgent2" [style.height.px]="20" [style.width.%]="17" (ngModelChange)="loadAgent1Info2(selectedAgent2)"
+            name="selectedAgent2" required placeholder="Select Tool 2" [ngClass]="{  'input-disabled' : readChange2 ,  'form-control': !readChange2}">
+            <mat-option [disabled]="data2 === selectedAgent1" *ngFor="let data2 of agentDataSource" [value]="data2"
+              style="color:#0033A0">
+              {{data2.toolName}}
+            </mat-option>
+          </mat-select>
+          <!--  <button mat-icon-button (click)="addproperty()">
+            <mat-icon title="addprop2 " class="mat-icon material-icons">
+              add_box
+            </mat-icon>
+          </button> -->
+        </div>
         <div class="divider"></div>
       </div>
     </div>
+    <div class="btnAlign">
+      <button mat-icon-button (click)="saveData(newName)" [disabled]="!isSaveEnabled || !listFilter">
+        <mat-icon title="Save " class="mat-icon material-icons">
+          save
+        </mat-icon>
+      </button>
+      <button mat-icon-button [disabled]="!isbuttonenabled" (click)="Delete()">
+        <mat-icon title="Delete " class="mat-icon material-icons">
+          delete
+        </mat-icon>
+      </button>
 
+      <button mat-icon-button [disabled]="!isbuttonenabled" (click)="Refresh()">
+        <mat-icon title="Cancel " class="mat-icon material-icons">
+          cancel
+        </mat-icon>
+      </button>
+
+
+    </div>
   </div>
-
-
-  <div class="btnAlign">
-    <button mat-icon-button (click)="saveData(newName)" [disabled]="!isSaveEnabled || !listFilter">
-      <mat-icon title="Save " class="mat-icon material-icons">
-        save
-      </mat-icon>
-    </button>
-    <button mat-icon-button [disabled]="!isbuttonenabled" (click)="Delete()">
-      <mat-icon title="Delete " class="mat-icon material-icons">
-        delete
-      </mat-icon>
-    </button>
-  </div>
-
-  <!-- 
-  <div class="NoteCss"><b>Please Note:Ensure that the properties selected to build a<br> Co-relatiosnhip are <b>indexed
-        in
-        Neo4j</b>for optimal
-      performance</b></div>
- -->
 
 
   <div>
 
     <div class="column2" style="margin-bottom: 1%;margin-left:10px;margin-right: 7px;border :white;border-radius: 10px;background-color:white;height: 69vh;">
       <div class="showTable" style="text-align: center; padding: 5px;">
-        <b>&nbsp; Co-relationship Name</b>
+        <b>&nbsp; Co-relation in Correlation.json & Neo4j</b>
       </div>
       <div class="arrange-horizontally">
 
 
         <!-- <-- Radio Button -->
         <div>
-          
+
           <table>
             <tbody>
+
+
+              <tr>
+                <td>
+                  <input type="text" class="inputcss" required placeholder="Search a Co-Relation" id='myInput' (keyup)='searchTable()'>
+                </td>
+                <mat-radio-group>
+                  <td>
+                    <mat-radio-button value="1" color="primary">Correlation.json</mat-radio-button>
+                  </td>
+                  <td>
+                    <mat-radio-button value="2" color="primary">Neo4j</mat-radio-button>
+
+                  </td>
+
+                  <td>
+                    <mat-radio-button value="2" color="primary">Both</mat-radio-button>
+
+                  </td>
+                </mat-radio-group>
+
+              </tr>
+              <tr>
+                <div class="orangeStripCssSmall"></div>
+              </tr>
               <tr>
 
                 <td><label class="SubHeading">Display Co-Relation</label></td>
-                <mat-radio-group>
+                <mat-radio-group [(ngModel)]="selectedRadio">
 
                   <td>
-                    <mat-radio-button value="1" color="primary" (click)="getCorrelation()">Correlation.json</mat-radio-button>
+                    <mat-radio-button value="file" color="primary">Correlation.json</mat-radio-button>
                   </td>
                   <td>
-                    <mat-radio-button value="2" color="primary" (click)="getCorrelationNeo4j()">Neo4j</mat-radio-button>
+                    <mat-radio-button value="neo4j" color="primary">Neo4j</mat-radio-button>
 
                   </td>
-                  
+
                   <td>
-                    <mat-radio-button value="2" color="primary" (click)="getCorrelationBoth()">Both</mat-radio-button>
+                    <mat-radio-button value="all" color="primary">Both</mat-radio-button>
 
                   </td>
 
@@ -108,81 +153,41 @@
               </tr>
             </tbody>
           </table>
-          
+
         </div>
         <!-- ending-->
         <br>
 
-        <button style="margin-top: 100px" mat-raised-button (click)="showDetailsDialog()" class="configureBut">
+        <button style="margin-top: 70px" mat-raised-button (click)="showDetailsDialog()" class="configureBut">
           View Correlation.json
         </button>
       </div>
       <!-- <div class="ListFooter">(There can be only ONE Relationship between a Set of Tools)</div> -->
 
+      <div class="divTablesHeadingLeft">
+        <table mat-table [dataSource]="getRelationsName()">
 
 
+          <ng-container matColumnDef="radio">
+            <!-- <th mat-header-cell *matHeaderCellDef></th> -->
+            <td mat-cell *matCellDef="let element " style="width:15% !important">
+              <mat-radio-button [value]="element" color="primary" (click)="enableDelete()"></mat-radio-button>
+            </td>
+          </ng-container>
 
-
-
-
-
-
-
-
-
-
-      <div class="divTablesHeading">
-          <input id='myInput' (keyup)='searchTable()' type='text'>
-        <table id='myTable'>
-          <tbody style="display:grid;max-height:50vh;margin-top: 10px">
-            <tr class="dat-rowNew" style="margin-top:20px" *ngFor="let dummy of relationDataSource">
-
-              <mat-radio-group [(ngModel)]="selectedDummyAgent">
-                <ng-container matColumnDef="radio">
-                  <mat-radio-button [value]="dummy" color="primary" (click)="enableDelete()"></mat-radio-button>
-                </ng-container>
-                <td style="text-align:left;padding-left: 15px;padding-top: 8px;align-items: center;">{{dummy}}</td>
-              </mat-radio-group>
-
-            </tr>
-          </tbody>
+          <ng-container matColumnDef="relationName">
+            <!-- <th mat-header-cell *matHeaderCellDef class="tableHeaderCss"></th> -->
+            <td mat-cell *matCellDef="let element" class="tableText">
+              {{element.relationName}} </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="dataComponentColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: dataComponentColumns;"> </tr>
         </table>
 
-        <div [hidden]="!showDetail">
-          <mat-paginator #paginator [pageSize]="MAX_ROWS_PER_TABLE" showFirstLastButtons class="paginationStyle"></mat-paginator>
-        </div>
-      </div>
 
 
-
-
-      <div class="divTablesHeading">
-        <table>
-          <tbody style="display:grid;max-height:50vh;margin-top: 10px">
-            <tr class="dat-rowNew" style="margin-top:20px" *ngFor="let dummy of relationDataSourceNeo4j">
-
-              <td style="text-align:left;padding-left: 15px;padding-top: 8px;align-items: center;">{{dummy}}</td>
-
-            </tr>
-            <div [hidden]="!showDetail">
-              <mat-paginator #paginator [pageSize]="MAX_ROWS_PER_TABLE" showFirstLastButtons class="paginationStyle"></mat-paginator>
-            </div>
-          </tbody>
-        </table>
 
       </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
     </div>
 
