--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
@@ -195,7 +195,9 @@
     <div class="column1" style="margin-bottom: 1%;margin-left: 7px;border :white;border-radius: 10px;background-color:white;height: 69vh;">
 
       <div class="showTable" style="text-align: center; padding: 5px;">
-        <b>&nbsp; Tool Properties(Select one property to BUILD Relationship)</b>
+        <b>&nbsp; Tool Properties</b> (Please select Tool Properties to build a Co-Relation) <br>
+        <a style="font-size:12px"> (Please delete and re-create existing relation to change properties with UNIQUE
+          name) </a>
       </div>
       <input type="text" class="inputcss" #newName style="margin-left: 310px; width: 250px ;margin-top: 10px"
         [(ngModel)]='listFilter' required placeholder="Please input a Co-Relation name">
