--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
@@ -97,19 +97,15 @@
     <div class="column2" style="margin-bottom: 1%;margin-left:10px;margin-right: 7px;border :white;border-radius: 10px;background-color:white;height: 69vh;">
       <div class="showTable" style="text-align: center; padding: 5px;">
         <b>&nbsp; Co-relation in Correlation.json & Neo4j</b>
-        <br><a style="font-size:12px">(<b>Please Note:-</b>Correlation in <b>Neo4j</b> are non editable and greyed out)
+        <br><a style="font-size:12px">(<b>Please Note:-</b> Correlation in <b>Neo4j</b> are non editable and greyed
+          out)
         </a>
       </div>
       <div class="arrange-horizontally">
-
-
         <!-- <-- Radio Button -->
         <div>
-
           <table>
             <tbody>
-
-
               <tr>
                 <td>
                   <input type="text" class="inputcss" required placeholder="Search a Co-Relation" id='myInput' (keyup)='searchTable()'>
@@ -120,24 +116,18 @@
                   </td>
                   <td>
                     <mat-radio-button value="2" color="primary">Neo4j</mat-radio-button>
-
                   </td>
-
                   <td>
                     <mat-radio-button value="2" color="primary">Both</mat-radio-button>
-
                   </td>
                 </mat-radio-group>
-
               </tr>
               <tr>
                 <div class="orangeStripCssSmall"></div>
               </tr>
               <tr>
-
                 <td><label class="SubHeading">Display Co-Relation</label></td>
                 <mat-radio-group [(ngModel)]="selectedRadio">
-
                   <td>
                     <mat-radio-button value="file" color="primary">Correlation.json</mat-radio-button>
                   </td>
@@ -173,7 +163,7 @@
           <ng-container matColumnDef="radio">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element " style="width:15% !important">
-              <mat-radio-group [(ngModel)]="selectedDummyAgent">
+              <mat-radio-group [(ngModel)]="selectedDummyAgent" [disabled]="element.isdataNeo4j">
                 <mat-radio-button [value]="element" color="primary" (click)="enableDelete()"></mat-radio-button>
               </mat-radio-group>
             </td>
@@ -181,7 +171,7 @@
 
           <ng-container matColumnDef="relationName">
             <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element" class="tableText">
+            <td mat-cell *matCellDef="let element" [ngClass]="{ 'tableText' : !element.isdataNeo4j , 'tableTextgreyed': element.isdataNeo4j}">
               {{element.relationName}} </td>
           </ng-container>
 
