--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
@@ -81,7 +81,7 @@
         </mat-icon>
       </button>
 
-      <button mat-icon-button [disabled]="!isbuttonenabled" (click)="Refresh()">
+      <button mat-icon-button [disabled]="!isrefresh" (click)="Refresh()">
         <mat-icon title="Cancel " class="mat-icon material-icons">
           cancel
         </mat-icon>
