--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
@@ -23,7 +23,7 @@
   </div>
   <div class="orangeStripCss"></div>
 
-  <div layout style="height: 60px; margin-left: 20px;">
+  <div layout style="height: 60px; ">
 
 
     <div layout="row" style="width: 100%; margin-top: 6px; height: 80%;">
@@ -34,11 +34,11 @@
           build a <br> Correlation <b>are indexed in Neo4j</b> for
           optimal performance
         </label>
-        <div style="margin-left: 400px; margin-top: -40px;">
+        <div style="margin-left: 41%; margin-top: -40px;">
 
 
           <label class="mainText"> Select Tools </label>
-          <mat-select [(ngModel)]="selectedAgent1" [style.height.px]="20" [style.width.%]="17" (ngModelChange)="loadAgent1Info(selectedAgent1)"
+          <mat-select [(ngModel)]="selectedAgent1" [style.height.px]="20" [style.width.%]="19" (ngModelChange)="loadAgent1Info(selectedAgent1)"
             name="selectedAgent1" required placeholder="Select Tool 1" [ngClass]="{  'input-disabled' : readChange ,  'form-control': !readChange}">
             <mat-option [disabled]="data1 === selectedAgent2" *ngFor="let data1 of agentDataSource" [value]="data1"
               style="color:#0033A0"> {{data1.toolName}} </mat-option>
@@ -48,8 +48,9 @@
               add_box
             </mat-icon>
           </button> -->
-          <mat-select [(ngModel)]="selectedAgent2" [style.height.px]="20" [style.width.%]="17" (ngModelChange)="loadAgent1Info2(selectedAgent2)"
-            name="selectedAgent2" required placeholder="Select Tool 2" [ngClass]="{  'input-disabled' : readChange2 ,  'form-control': !readChange2}">
+          <mat-select [(ngModel)]="selectedAgent2" [style.height.px]="20" [style.width.%]="19" [style.margin-left.%]="2"
+            (ngModelChange)="loadAgent1Info2(selectedAgent2)" name="selectedAgent2" required placeholder="Select Tool 2"
+            [ngClass]="{  'input-disabled' : readChange2 ,  'form-control': !readChange2}">
             <mat-option [disabled]="data2 === selectedAgent1" *ngFor="let data2 of agentDataSource" [value]="data2"
               style="color:#0033A0"> {{data2.toolName}} </mat-option>
           </mat-select>
@@ -84,7 +85,7 @@
 
   <div>
 
-    <div class="column2" style="margin-bottom: 1%; margin-left: 10px; margin-right: 7px; border: white; border-radius: 10px; background-color: white; height: 69vh;">
+    <div class="column2" style="margin-bottom: 1%; margin-right: 7px; border: white; border-radius: 10px; background-color: white; height: 69vh;">
       <div class="showTable" style="text-align: center; padding: 5px;">
         <b>&nbsp; Co-relation in Correlation.json & Neo4j</b> <br>
         <a style="font-size: 12px">(<b>Please Note:-</b> Correlation in
@@ -168,6 +169,9 @@
         </table>
       </div>
     </div>
+    <!-- <div>
+      <mat-paginator #paginator [pageSize]="MAX_ROWS_PER_TABLE" showFirstLastButtons class="paginationStyle"></mat-paginator>
+    </div> -->
 
 
     <div class="column1" style="margin-bottom: 1%; margin-left: 7px; border: white; border-radius: 10px; background-color: white; height: 69vh;">
@@ -178,7 +182,7 @@
           (Please delete and re-create existing relation to change properties
           with UNIQUE name) </a>
       </div>
-      <input type="text" class="inputcss" #newName style="margin-left: 310px; width: 250px; margin-top: 10px"
+      <input type="text" class="inputcss" #newName style="margin-left: 291px; width: 250px; margin-top: 10px"
         [(ngModel)]='listFilter' required placeholder="Please input a Co-Relation name">
 
       <div style="height: 100%; width: 100%; overflow: visible;">
