164694331 :- refresh button (bug fix)

--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.css
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.css
@@ -204,10 +204,13 @@ th, td {
     margin: 0 auto;
 }
 
-.mat-table {
-    background-color: #FF8F1C !important;
-}
-
+.mat-table {
+    overflow: scroll;
+    width: 100%;
+    max-height: 50px
+    
+    
+  }
 .ListFooter
 {
     font-size: 10px;
