--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.css
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.css
@@ -240,7 +240,7 @@ th, td {
     margin-right: 10px;
     border-radius: 0px !important;
     height: 100%;
-    width:200px;
+    width:150px;
     padding-left: 10px;
     padding-right: 10px;
      border-top-left-radius: 0px !important;
@@ -289,12 +289,37 @@ th, td {
     padding:0px;
 }
 
-.column1{
+.column2{
     float: right;
-    width: 52%;
+    width: 37%;
     box-shadow: 0 2px 2px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
     -o-box-shadow: 2px  0 5px  rgba(0,0,0,.2);
     
+}
+
+.Neo4jDataButtonCss
+{
+   
+    
+/* float: right; */
+    background-color: #0033A0 !important;
+   /*  margin-bottom: 8px;
+    margin-left: -150px; 
+   /*  margin-top: 10px; */
+   /* margin-right: 10px;
+    border-radius: 0px !important;
+   
+    
+    padding-left: 10px;
+    padding-right: 10px;
+     border-top-left-radius: 0px !important;
+    border-top-right-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+    border-bottom-left-radius: 0px !important; */
+   font-size: 11px; 
+   margin-left: 60px;
+
+
 }
 
 .showTable {
@@ -312,17 +337,18 @@ th, td {
     color: #00B140;
     font-size: 15px;
     font-family: inherit;
+    margin-left: 5px;
   
 }
 .NoteCss
 {
     font-family: inherit;
-font-size: 14px;
+font-size: 13.6px;
 }
 
-.column2{
+.column1{
     float: left;
-    width:46%;
+    width:60%;
     box-shadow: 0 2px 2px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
     -o-box-shadow: 2px  0 5px  rgba(0,0,0,.2);
 }
