--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/show-correlationjson.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/show-correlationjson.html
@@ -17,7 +17,7 @@
 
 <div class="arrange-horizontally-Dialog" style="padding:0px">
     <div class="gridheadercenter">
-        Correlation.json
+        <pre style="font-family: inherit; font-size: 23px;margin-top: -7px;">{{title1}}</pre>
     </div>
 
 
