UI changes and addition of Pop up on save button.164367775

--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
@@ -84,7 +84,7 @@
 
     <div class="column2" style="margin-bottom: 1%; margin-right: 7px; border: white; border-radius: 10px; background-color: white; height: 69vh;">
       <div class="showTable" style="text-align: center; padding: 5px;height: 45px;">
-        <b>&nbsp; Co-relation in Correlation.json</b> <br>
+        <b>&nbsp; Co-Relation in Correlation.json</b> <br>
 
       </div>
 
@@ -106,7 +106,7 @@
               </tr>
               <tr>
                 <td><label class="SubHeading">Display Co-Relations</label></td>
-                <td><button style="margin-left: 70px" mat-raised-button (click)="showDetailsDialog()" class="configureBut">View
+                <td><button style="margin-left: 40px" mat-raised-button (click)="showDetailsDialog()" class="configureBut">View
                     Correlation.json</button></td>
               </tr>
               <tr>
@@ -117,7 +117,7 @@
           <label class="NoteCssFirst"><b>Please Note:</b></label><label class="NoteCss"> Ensure that the properties
             selected to
             build a &nbsp;Correlation <b>are indexed in Neo4j</b> for
-            optimal performance
+            Optimal Performance.
           </label>
         </div>
         <!-- ending-->
@@ -177,7 +177,7 @@
       <button mat-raised-button [disabled]="(noShowDetail||noShowDetail2||!selectedAgent1 || !selectedAgent2||buttonOn) "
         (click)="showDetailsDialogForNeo4j(selectedAgent1,selectedAgent2)" class="Neo4jDataButtonCss">Click
         to see the
-        exsisting Correlation in Neo4j</button>
+        exsisting Co-Relations in Neo4j</button>
 
       <div style="height: 100%; width: 100%; overflow: visible;">
         <div style="width: 47%; display: inline-block; margin-left: 8px; vertical-align: top;">
