--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
@@ -82,7 +82,7 @@
 
   <div>
 
-    <div class="column2" style="margin-bottom: 1%; margin-right: 7px; border: white; border-radius: 10px; background-color: white; height: 69vh;">
+    <div class="column2" style="margin-bottom: 1%; margin-right: 1px; border: white; border-radius: 10px; background-color: white; height: 69vh;">
       <div class="showTable" style="text-align: center; padding: 5px;">
         <!-- height: 45px; -->
         <b>&nbsp; Co-Relation in Correlation.json</b> <br> <a style="font-size: 12px">
@@ -184,7 +184,7 @@
       <button mat-raised-button [disabled]="(noShowDetail||noShowDetail2||!selectedAgent1 || !selectedAgent2||buttonOn) "
         (click)="showDetailsDialogForNeo4j(selectedAgent1,selectedAgent2)" class="Neo4jDataButtonCss">Click
         to see the
-        exsisting Co-Relation in Neo4j</button>
+        exsisting Co-Relations in Neo4j</button>
 
       <div style="height: 100%; width: 100%; overflow: visible;">
         <div style="width: 47%; display: inline-block; margin-left: 8px; vertical-align: top;">
@@ -212,9 +212,9 @@
             </div>
           </div>
           <table *ngIf="showDetail" style="margin-left: 3%;">
-            <tbody style="display: grid; max-height: 41vh; overflow: auto;">
+            <tbody style="display: grid; max-height: 38vh; overflow: auto;">
               <tr class="dat-row" *ngFor="let element of agent1TableData">
-                <mat-radio-group [(ngModel)]="selectedProperty1">
+                <mat-radio-group [(ngModel)]="selectedProperty1" style="margin-left: 7px">
                   <ng-container matColumnDef="radio">
                     <mat-radio-button [value]="element" color="primary" (click)="enableSaveProperty1()">
                     </mat-radio-button>
@@ -238,10 +238,10 @@
             </div>
           </div>
           <table *ngIf="showDetail2" style="margin-left: 4%;">
-            <tbody style="display: grid; max-height: 41vh; overflow: auto;">
+            <tbody style="display: grid; max-height: 38vh; overflow: auto;">
               <tr class="dat-row" *ngFor="let element1 of agent2TableData">
 
-                <mat-radio-group [(ngModel)]="selectedProperty2">
+                <mat-radio-group [(ngModel)]="selectedProperty2" style="margin-left: 7px">
                   <ng-container matColumnDef="radio">
                     <mat-radio-button [value]="element1" color="primary" (click)="enableSaveProperty2()">
                     </mat-radio-button>
