--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
@@ -123,7 +123,7 @@
           <ng-container matColumnDef="radio">
 
             <td mat-cell *matCellDef="let element " style="width: 15% !important;padding-left: 23px  !important;">
-              <mat-radio-group [(ngModel)]="selectedDummyAgent">
+              <mat-radio-group [(ngModel)]="deleteRelation">
                 <mat-radio-button [value]="element" color="primary" (click)="enableDelete()"></mat-radio-button>
               </mat-radio-group>
             </td>
