--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/relationship-builder/relationship-builder.component.html
@@ -119,7 +119,7 @@
       </div>
       <!-- <div class="ListFooter">(There can be only ONE Relationship between a Set of Tools)</div> -->
       <div class="divTablesHeadingLeft">
-        <table mat-table id="myTable" [dataSource]="relData">
+        <table mat-table id="myTable" [dataSource]="relationmappingLabels">
           <ng-container matColumnDef="radio">
 
             <td mat-cell *matCellDef="let element " style="width: 15% !important;padding-left: 23px  !important;">
@@ -133,7 +133,7 @@
             <td mat-cell *matCellDef="let element">
               <div class="tableText"> {{element.relationName}}
               </div>
-              <div [innerHTML]="element.prop"></div>
+              <div [innerHTML]="element.detailProp"></div>
             </td>
           </ng-container>
 
