--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/user-onboarding/user-onboarding.component.css
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/user-onboarding/user-onboarding.component.css
@@ -17,7 +17,7 @@
 
 
 .form-control {
-    padding: 6px 12px;
+    padding: 6px 28px;
     font-size: 13px;
     background-color: white;
     background-image: none;
@@ -77,6 +77,7 @@
 .btnAlign{
     margin-right: 7px; 
     float: right;
+    margin-bottom: 10px;
 }
 
 .accessGroupbutton{
