--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/user-onboarding/user-onboarding.component.html
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/modules/user-onboarding/user-onboarding.component.html
@@ -25,7 +25,7 @@
   <div class="orangeStripCss"></div>
 
   <div layout layout-align="left" class="sectionHeadingStyleWithoutButton">
-    <div layout>&nbsp; Add Group / Edit User Role
+    <div layout>&nbsp; Add Access Group / Edit User Role /Add User /Assign User to Various Access Group
     </div>
   </div>
 
@@ -36,16 +36,18 @@
 
   <div>
     <label class="mainText"> Current Access Group </label>
-    <mat-select [(ngModel)]="selectedAdminOrg" [style.height.px]="20" [style.width.%]="20" (ngModelChange)="loadUsersInfo(selectedAdminOrg)"
-      name="selectedAdminOrg" required placeholder="Select an Access Group" [ngClass]="{  'input-disabled' : readOnlyOrg ,  'form-control': !readOnlyOrg}">
+    <mat-select [(ngModel)]="selectedAdminOrg" [style.height.px]="20" [style.width.%]="20"
+      (ngModelChange)="loadUsersInfo(selectedAdminOrg)" name="selectedAdminOrg" [ngClass]="{  'input-disabled' : readOnlyOrg ,  'form-control': !readOnlyOrg}">
+
       <mat-option *ngFor="let record of adminOrgDataArray" [value]="record">
         {{record.name}}
       </mat-option>
-      </mat-select>
-      <div class="filterGroupCSS" *ngIf=" showDetail ">
-        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search by Login ID or Email Address
-          " [style.height.px]="20" [style.width.%]="80" class="form-control">
-      </div>
+    </mat-select>
+    <div class="filterGroupCSS" *ngIf=" showDetail ">
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search by Login ID or Email Address
+          "
+        [style.height.px]="20" [style.width.%]="80" class="form-control">
+    </div>
   </div>
 
 
@@ -56,17 +58,19 @@
         <mat-icon title="Add New Access Group" class="mat-icon material-icons">
           add_circle
         </mat-icon>
+
+      </button>
+      <button mat-icon-button (click)="addGlobalUser()">
+        <mat-icon title="Add Global User" class="mat-icon material-icons">
+          person_add
+        </mat-icon>
         <mat-icon svgIcon="lineInButton" class="mat-icon material-icons">
           linea
         </mat-icon>
       </button>
 
 
-      <!--<button mat-icon-button (click)="addGlobalUser()">
-        <mat-icon title="Add Global User" class="mat-icon material-icons">
-            person_add
-        </mat-icon>
-      </button>-->
+
 
       <button mat-icon-button (click)="saveData() " [disabled]="!isSaveEnable ">
         <mat-icon title="Save " class="mat-icon material-icons ">
@@ -85,6 +89,12 @@
           delete
         </mat-icon>
       </button>
+
+      <button mat-icon-button [disabled]="" (click)="Refresh()">
+        <mat-icon title="Cancel " class="mat-icon material-icons">
+          cancel </mat-icon>
+      </button>
+
     </div>
     <div>
 
@@ -115,14 +125,16 @@
           </ng-container>
 
           <ng-container matColumnDef="Role">
-            <th mat-header-cell *matHeaderCellDef class="tableHeaderCss ">Role in Access Group</th>
+            <th mat-header-cell *matHeaderCellDef class="tableHeaderCss ">User Role in Access Group</th>
             <td mat-cell *matCellDef="let element ">
               <mat-select [(ngModel)]="element.role " [style.width.%]="80 " name="{{element.role}}
-                   " required placeholder="Select number of records " [disabled]="isSelectedUserId!=element.userId " [ngClass]="{ 'input-disabled' : !isSaveEnable  , 'form-control': isSaveEnable} ">
+                   "
+                required placeholder="Select number of records " [disabled]="isSelectedUserId!=element.userId "
+                [ngClass]="{ 'input-disabled' : !isSaveEnable  , 'form-control': isSaveEnable} ">
                 <mat-option *ngFor=" let record of roleRecord " [value]="record.value ">
                   {{record.name}}
                 </mat-option>
-                </mat-select>
+              </mat-select>
             </td>
           </ng-container>
 
